<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".fragments.CreateIssue">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/create_new_issue"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/auto_manual_desc"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:elevation="@dimen/line_spacing">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="Autonomous Mode"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autonomous_desc"
                    android:padding="16dp"
                    android:lineSpacingExtra="@dimen/line_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/learnMoreAutonomous"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/learn_more"/>

                    <Button
                        android:id="@+id/startAutonomousMode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/start"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:elevation="@dimen/line_spacing">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="Manual Mode"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_desc"
                    android:padding="16dp"
                    android:lineSpacingExtra="@dimen/line_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/learnMoreManual"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/learn_more"/>

                    <Button
                        android:id="@+id/startManualMode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/start"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>